# slide-gen

./: .gitignore  CLAUDE.md  LICENSE  README.md  cli.mbt  cli_e2e_test.mbt  cli_test.mbt  cli_wbtest.mbt  discovery.mbt  discovery_test.mbt  generate.mbt  generate_test.mbt  generate_wbtest.mbt  justfile  live_run_test.mbt  moon.mod  moon.pkg  provenance.mbt  provenance_test.mbt  provenance_wbtest.mbt  publication.mbt  pyproject.toml  render.mbt  render_wbtest.mbt  run.mbt  run_wbtest.mbt  state.mbt  state_test.mbt  state_wbtest.mbt  validate.mbt  validate_test.mbt  validate_wbtest.mbt
.agent/: context.sh  memory.md  roadmap.md
.agents/skills/session-prompt/: SKILL.md
.claude/: settings.json
.claude/commands/: codex-review.md  session-prompt.md
.codex/prompts/: session.md
.github/workflows/: ci.yml
.serena/: project.yml
cmd/main/: main.mbt  moon.pkg
cmd/slide-gen/: moon.pkg
decks/rehab/: deck.html  figures.py  gaps.md  provenance.json
decks/spine-segmentation/: deck.html  figures.py  gaps.md  provenance.json
templates/: deck-prompt.md  deck.html
testdata/live-run/: README.md  metrics.csv
tools/: __init__.py  ci.sh  ci_smoke.sh  furigana_check.py  furigana_check_test.py  install.sh  install_smoke.sh  live_run.sh  moon_deps.sh
