# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

[project]
name = "slide-gen-authoring"
version = "0.1.0"
description = "Authoring-time helpers for slide-gen"
requires-python = ">=3.11"
dependencies = [
  "fugashi[unidic-lite]==1.5.2",
]

[dependency-groups]
dev = [
  "ruff==0.15.20",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]
